TLSRoute add certificateRefs

--- a/templates/gateway.yaml
+++ b/templates/gateway.yaml
@@ -41,6 +41,10 @@ spec:
             matchLabels:
               {{ .matchLabels }}
       tls:
+        certificateRefs:
+          - kind: Secret
+            group: ""
+            name: {{ $.Values.gateway.tls.secretName }}
         mode: Passthrough
 {{- else if hasPrefix "HTTP" (upper .protocol) }}
     - name: {{ .name }}
